--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <li><a href="#">Portfolio</a></li>
 
           <li><a href="#">Contact</a></li>
-        </ul><a href="#" class="social_contact">facebook</a> <a href="#" class=
-        "social_contact">twitter</a>
+        </ul><a href="#" class="social_contact">Facebook</a> <a href="#" class=
+        "social_contact">Twitter</a>
       </div>
 
       <div class="section sectiontop">
@@ -49,7 +49,7 @@
         </div>
 
         <div class="right">
-          <p></p>
+          <p>I am 15 years old. My hobbies are programming, gaming, and bboy.</p>
 
           <p></p>
         </div>
