--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <ul>
           <li><b><u>E-mail:</u></b> <a href="mailto:soccerfish2436@gmail.com">soccerfish2436@gmail.com</a></li>
 
-          <li><b><u>Website:<b></u> <a href="#">bradymills.com</a></li>
+          <li><b><u>Website:<b></u> <a href="#"><!--Future Website--></a></li>
 
           <li><b><u>Phone:</b></u> (385)-715-0283</li>
 
-          <li><b><u>Address:</b></u> 32 Your Street, City, Country</li>
+          <li><b><u>Address:</b></u> Salt Lake City, Utah, United States</li>
         </ul>
       </div>
 
@@ -62,8 +62,8 @@
         </div>
 
         <div class="right gallery">
-          <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
-          <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
+          <a href="#"><img src="img/pic1.png" width="90" height="90" alt="image" /></a>
+          <a href="#"><img src="img/pic2.png" width="90" height="90" alt="image" /></a>
           <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
           <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
           <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
@@ -78,7 +78,7 @@
         <div class="left">
           <h3>Education</h3>
 
-          <p></p>
+          <p>Whatever you're going to be, be a good one. -Abraham Lincon</p>
         </div>
 
         <div class="right">
@@ -137,7 +137,7 @@
         <div class="left">
           <h3>Contact</h3>
 
-          <p></p>
+          <p>If you have a job offer for me contact me. Text or email is the best way to contact me.</p>
         </div>
 
         <div class="right">
@@ -156,9 +156,9 @@
           <p class="contact_text"></p>
 
           <div id="contact_icons">
-            <a href="#" class="social_contact">facebook</a> <a href="#" class=
-            "social_contact">twitter</a> <a href="#" class="social_contact">deviantArt</a> <a href="#"
-            class="social_contact">Google+</a>
+            <a href="https://www.facebook.com/profile.php?id=100005035665171" class="social_contact">Facebook</a> <a href="#" class=
+            "social_contact">Twitter</a> <a href="#" class="social_contact"></a> <a href="https://instagram.com/bboy_sharp"
+            class="social_contact">Instagram</a>
           </div>
         </div>
       </div>
