--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li><a href="#">Portfolio</a></li>
 
           <li><a href="#">Contact</a></li>
-        </ul><a href="#" class="social_contact">Facebook</a> <a href="#" class=
+        </ul><a href="https://www.facebook.com/profile.php?id=100005035665171" class="social_contact">Facebook</a> <a href="#" class=
         "social_contact">Twitter</a>
       </div>
 
