--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="css/progressbar.css" type="text/css" />
   <link rel="stylesheet" href="css/print.css" type="text/css" media="print" />
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="stylesheet" href="virus.js"/>
 </head>
 
 <body>
