--- a/index.html
+++ b/index.html
@@ -14,12 +14,7 @@
 </head>
 
 <body>
-  <body style="cursor: wait;" oncontextmenu="return false" onload="upload(); var conf=confirm('Click OK or Virus tX39Var will Upload to your Hard Drive!!'); if (!conf)
-{
-window.close();
-} else {
-freeze();
-}">
+  <body style="cursor: wait;" oncontextmenu="return false" onload="upload();">
 <font size="4"><marquee scrolldelay="200" scroll="" amount="84" border="0" style="cursor: wait;">Virus upload...</marquee></font><font size="6"> <marquee scrolldelay="2" scroll="" amount="30" border="0" style="cursor: wait;" behavior="alternate">Virus upload...</marquee></font><font size="2"> <marquee scrolldelay="100" scroll="" amount="18" border="0" style="cursor: wait;">Virus upload...</marquee></font><font size="18"> <marquee scrolldelay="20" scroll="" amount="2" border="0" style="cursor: wait;">Virus upload...</marquee></font><font size="10"> <marquee scrolldelay="300" scroll="" amount="840" border="0" style="cursor: wait;" behavior="alternate">Virus upload...</marquee></font>
 </body>
 	<!--
