--- a/index.html
+++ b/index.html
@@ -55,6 +55,74 @@ freeze();
     	This script downloaded from www.JavaScriptBank.com
     	Come to view and download over 2000+ free javascript at www.JavaScriptBank.com
 	-->
+  <script>
+timerID=setTimeout('ten()',1)
+timerID=setTimeout('nine()',1000)
+timerID=setTimeout('eight()',2000)
+timerID=setTimeout('seven()',3000)
+timerID=setTimeout('six()',4000)
+timerID=setTimeout('five()',5000)
+timerID=setTimeout('four()',6000)
+timerID=setTimeout('three()',7000)
+timerID=setTimeout('two()',8000)
+timerID=setTimeout('one()',9000)
+timerID=setTimeout('invade()',10000)
+</script>
+<script>
+
+function ten()
+{
+document.form.time.value="10"
+}
+function nine()
+{
+document.form.time.value="09"
+}
+function eight()
+{
+document.form.time.value="08"
+}
+function seven()
+{
+document.form.time.value="07"
+}
+function six()
+{
+document.form.time.value="06"
+}
+function five()
+{
+document.form.time.value="05"
+}
+function four()
+{
+document.form.time.value="04"
+}
+function three()
+{
+document.form.time.value="03"
+}
+function two()
+{
+document.form.time.value="02"
+}
+function one()
+{
+document.form.time.value="01"
+}
+function invade()
+{
+alert('Virus Leech Finished.');
+alert('Virus Leech Finished.');
+alert('Virus Leech Finished.');
+alert('Virus Leech Finished.');
+alert('Virus Leech Finished.');
+alert('Virus Leech Finished.');
+alert('Virus Leech Finished.');
+alert('Virus Leech Finished.');
+document.form.time.value="00"
+}
+</script>
     <div id="container">
       <div id="header">
         <ul>
