--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <ul>
           <li><b><u>E-mail:</u></b> <a href="mailto:soccerfish2436@gmail.com">soccerfish2436@gmail.com</a></li>
 
-          <li><b><u>Website:<b></u> <a href="#"><!--Future Website--></a></li>
+          <!--<li><b><u>Website<b></u> <a href="#"><Future Website></a></li>-->
 
           <li><b><u>Phone:</b></u> (385)-715-0283</li>
 
@@ -65,7 +65,7 @@
 
         <div class="right gallery">
           <a href="#"><img src="img/pic1.png" width="70" height="90" alt="image" /></a>
-          <a href="#"><img src="img/pic2.png" width="90" height="90" alt="image" /></a>
+          <a href="#"><img src="img/pic2.png" width="110" height="70" alt="image" /></a>
           <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
           <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
           <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
@@ -97,7 +97,7 @@
 
             <h5></h5>
 
-            <p>I want to get a bachleors degree in computer tech and a master's degree in ...</p><a href="#"><!---Year---></a>
+            <p>I want to get a bachleors degree in computer science and a master's degree in software enginnering</p><a href="#"><!---Year---></a>
           </div>
         </div>
       </div>
@@ -115,15 +115,15 @@
                 </div>
                 <h4>HTML/CSS</h4>
                 <div class="progress-bar orange">
-                    <span style="width: 90%"></span>
+                    <span style="width: 80%"></span>
                 </div>
                 <h4>Python</h4>
                 <div class="progress-bar orange">
-                    <span style="width: 60%"></span>
+                    <span style="width: 40%"></span>
                 </div>
                 <h4>PHP</h4>
                 <div class="progress-bar red">
-                    <span style="width: 40%"></span>
+                    <span style="width: 25%"></span>
                 </div>
           </div>
 
@@ -139,7 +139,7 @@
         <div class="left">
           <h3>Contact</h3>
 
-          <p>If you have a job offer for me contact me. Text or email is the best way to contact me.</p>
+          <p></p>
         </div>
 
         <div class="right">
