--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!--<html xmlns="http://www.w3.org/1999/xhtml">-->
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Brady's Resume</title>
@@ -21,7 +21,7 @@
           <li><a href="#">Portfolio</a></li>
 
           <li><a href="#">Contact</a></li>
-        </ul><a href="https://www.facebook.com/profile.php?id=100005035665171" class="social_contact">Facebook</a> <a href="#" class=
+        </ul><a href="https://www.facebook.com/profile.php?id=100005035665171" class="social_contact">Facebook</a> <a href="https://twitter.com/#!/essence3383" class=
         "social_contact">Twitter</a>
       </div>
 
@@ -128,7 +128,7 @@
           </div>
 
           <div class="right_left">
-            <p><span>My Experience</span></p>
+            <h4><span>My Experience</span></h4>
 
             <p>I started my computer programming carrer in 2018, I joined the Code to Success program. I started learning html and css, during that time I created this website.</p>
           </div>
@@ -158,7 +158,7 @@
           <p class="contact_text"></p>
 
           <div id="contact_icons">
-            <a href="https://www.facebook.com/profile.php?id=100005035665171" class="social_contact">Facebook</a> <a href="#" class=
+            <a href="https://www.facebook.com/profile.php?id=100005035665171" class="social_contact">Facebook</a> <a href="https://twitter.com/#!/essence3383" class=
             "social_contact">Twitter</a> <a href="#" class="social_contact"></a> <a href="https://instagram.com/bboy_sharp"
             class="social_contact">Instagram</a>
           </div>
