--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <div class="right gallery">
           <a href="#"><img src="img/pic1.png" width="70" height="90" alt="image" /></a>
           <a href="#"><img src="img/pic2.png" width="110" height="70" alt="image" /></a>
-          <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
-          <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
+          <a href="#"><img src="img/cave1.png" width="90" height="90" alt="image" /></a>
+          <a href="#"><img src="img/art1.png" width="80" height="90" alt="image" /></a>
           <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
           <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
           <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
