--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <a href="#"><img src="img/pic2.png" width="110" height="70" alt="image" /></a>
           <a href="#"><img src="img/cave1.png" width="90" height="90" alt="image" /></a>
           <a href="#"><img src="img/art1.png" width="80" height="90" alt="image" /></a>
-          <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
+          <a href="#"><img src="img/family1.png" width="100" height="70" alt="image" /></a>
           <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
           <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
           <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
