--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <div id="container">
       <div id="header">
         <ul>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="#Portfolio">Portfolio</a></li>
 
-          <li><a href="#">Contact</a></li>
+          <li><a href="#Contact">Contact</a></li>
         </ul><a href="https://www.facebook.com/profile.php?id=100005035665171" class="social_contact">Facebook</a> <a href="https://twitter.com/#!/essence3383" class=
         "social_contact">Twitter</a>
       </div>
@@ -58,21 +58,21 @@
 
       <div class="section gallery">
         <div class="left">
-          <h3>Porfolio</h3>
+          <a name= "Portfolio"><h3>Porfolio</h3></a>
 
           <p>Just a few pictures of me.</p>
         </div>
 
         <div class="right gallery">
-          <a href="#"><img src="img/pic1.png" width="70" height="90" alt="image" /></a>
-          <a href="#"><img src="img/pic2.png" width="110" height="70" alt="image" /></a>
-          <a href="#"><img src="img/cave1.png" width="90" height="90" alt="image" /></a>
-          <a href="#"><img src="img/art1.png" width="80" height="90" alt="image" /></a>
-          <a href="#"><img src="img/family1.png" width="100" height="70" alt="image" /></a>
-          <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
-          <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
-          <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
-          <a href="#"><img src="img/pic.png" width="90" height="90" alt="image" /></a>
+          <img src="img/pic1.png" width="70" height="90" alt="image" />
+          <img src="img/pic2.png" width="110" height="70" alt="image" />
+          <img src="img/cave1.png" width="90" height="90" alt="image" />
+          <img src="img/art1.png" width="80" height="90" alt="image" />
+          <img src="img/family1.png" width="100" height="70" alt="image" />
+          <img src="img/pic.png" width="90" height="90" alt="image" />
+          <img src="img/pic.png" width="90" height="90" alt="image" />
+          <img src="img/pic.png" width="90" height="90" alt="image" />
+          <img src="img/pic.png" width="90" height="90" alt="image" />
         </div>
       </div>
 
@@ -137,7 +137,7 @@
 
       <div class="section contact">
         <div class="left">
-          <h3>Contact</h3>
+          <a name="Contact"><h3>Contact</h3></a>
 
           <p></p>
         </div>
