--- a/index.html
+++ b/index.html
@@ -143,19 +143,28 @@
         </div>
 
         <div class="right">
-          <form class="form" action="#">
-            <p class="name"><input type="text" name="name" id="name" value="Name" /></p>
 
-            <p class="email"><input type="text" name="email" id="email" value="E-mail" /></p>
+            <form action="action_page.php">
 
-            <p class="text">
-            <textarea name="text" rows="" cols="">Text
-</textarea></p>
+      <label for="fname">First Name</label>
+      <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
-            <p class="submit"><input type="submit" value="Send" /></p>
-          </form>
+      <label for="lname">Last Name</label>
+      <input type="text" id="lname" name="lastname" placeholder="Your last name..">
 
-          <p class="contact_text"></p>
+      <!--<label for="country">Country</label>
+      <select id="country" name="country">
+        <option value="australia">Australia</option>
+        <option value="canada">Canada</option>
+        <option value="usa">USA</option>
+      </select>-->
+
+      <label for="subject">Subject</label>
+      <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+      <input type="submit" value="Submit">
+
+    </form>
 
           <div id="contact_icons">
             <a href="https://www.facebook.com/profile.php?id=100005035665171" class="social_contact">Facebook</a> <a href="https://twitter.com/#!/essence3383" class=
